@@ -1846,7 +1846,7 @@ public abstract class PluginManager extends AbstractModelObject implements OnMas
 
         @Override
         public void copy(File target) throws Exception {
-            try (InputStream input =  ProxyConfiguration.getInputStream(new URI(url).toURL())) {
+            try (InputStream input =  ProxyConfiguration.getInputStream(new URL(url))) {
                 Files.copy(input, target.toPath());
             }
         }
@@ -1948,7 +1948,7 @@ public abstract class PluginManager extends AbstractModelObject implements OnMas
     @RequirePOST public FormValidation doCheckPluginUrl(StaplerRequest request, @QueryParameter String value) throws IOException {
         if (StringUtils.isNotBlank(value)) {
             try {
-                URL url = new URI(value).toURL();
+                URL url = new URL(value);
                 if (!url.getProtocol().startsWith("http")) {
                     return FormValidation.error(Messages.PluginManager_invalidUrl());
                 }
@@ -1956,7 +1956,7 @@ public abstract class PluginManager extends AbstractModelObject implements OnMas
                 if (!url.getProtocol().equals("https")) {
                     return FormValidation.warning(Messages.PluginManager_insecureUrl());
                 }
-            } catch (MalformedURLException | URISyntaxException e) {
+            } catch (MalformedURLException e) {
                 return FormValidation.error(e.getMessage());
             }
         }
